# rust

./: .gitignore  .markdownlint.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  book.toml  justfile  rustfmt.toml  taplo.toml
.claude/rules/: markdown.md  rust.md
.github/: dependabot.yml
.github/workflows/: book.yml  codeql.yml  rust.yml  zizmor.yml
book/: README.md  SUMMARY.md
book/examples/: 1-math.md  2-diagrams.md
crates/my-library/: Cargo.toml
